examples/type_system/failing/76_hm_match_guard_non_bool_compile_mismatch.flx
fn pick(x: Int) -> Int {
    match x {
        n if 1 -> n,
        _ -> 0,
    }
}

fn main() -> Unit with IO {
    print(to_string(pick(7)))
}
